[tool.poetry]
name = "pdf-slides-to-blog"
version = "0.1.0"
description = "A Streamlit and OpenAI based application to convert PDF slides into structured technical blog posts."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.11"
streamlit = "1.24.1"
pdf2image = "1.16.3"
Pillow = "9.5.0"
pypdf = "3.12.1"
poppler-utils = "0.1.0"
langchain = "0.1.0"
langchain-core = "0.1.10"
langchain-community = "0.0.13"
langchain-openai = "0.0.2"
python-dotenv = ">=1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
