[project]
name = "pdf2blog"
version = "0.1.0"
description = "A Streamlit and OpenAI based application to convert PDF slides into structured technical blog posts."
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "langchain-community==0.0.13",
    "langchain-core==0.1.10",
    "langchain-openai==0.0.2",
    "langchain==0.1.0",
    "pdf2image==1.16.3",
    "pillow>=9.5.0",
    "poppler-utils==0.1.0",
    "pypdf==3.12.1",
    "python-dotenv>=1.0.1",
    "streamlit==1.24.1",
]
